--- a/docs/main.tex
+++ b/docs/main.tex
@@ -107,7 +107,7 @@ A series of tests was conducted to evaluate the models’ accuracy, compliance w
 \input{tex/2-przeglad-literatury}
 \input{tex/3-przeglad-narzedzi}
 \input{tex/4-projekt-eksperymentow}
-% \input{tex/5-analiza-porownawcza}
+\input{tex/5-analiza-porownawcza}
 % \input{tex/6-bezpieczenstwo}
 % \input{tex/7-projekt-systemu}
 % \input{tex/8-implementacja}
