--- a/docs/bibliografia.bib
+++ b/docs/bibliografia.bib
@@ -637,8 +637,19 @@
   urldate      = {2025-06-11}
 }
 
-https://openai.com/index/coderabbit/
+@misc{streamlit,
+  title    = {Streamlit: framework do tworzenia aplikacji webowych w Pythonie},
+  url      = {https://streamlit.io/},
+  language = {en},
+  urldate  = {2025-10-27}
+}
 
+@misc{microk8s,
+  title    = {MicroK8s: lekka dystrybucja Kubernetes dla deweloperów i IoT},
+  url      = {https://microk8s.io/},
+  language = {en},
+  urldate  = {2025-10-27}
+}
 
 @article{masoudnia_mixture_2014,
   title      = {Mixture of experts: a literature survey},
@@ -648,7 +659,7 @@ https://openai.com/index/coderabbit/
   shorttitle = {Mixture of experts},
   url        = {http://link.springer.com/10.1007/s10462-012-9338-y},
   doi        = {10.1007/s10462-012-9338-y},
-  abstract   = {Mixture of experts (ME) is one of the most popular and interesting combining methods, which has great potential to improve performance in machine learning. ME is established based on the divide-and-conquer principle in which the problem space is divided between a few neural network experts, supervised by a gating network. In earlier works on ME, different strategies were developed to divide the problem space between the experts. To survey and analyse these methods more clearly, we present a categorisation of the ME literature based on this difference. Various ME implementations were classiﬁed into two groups, according to the partitioning strategies used and both how and when the gating network is involved in the partitioning and combining procedures. In the ﬁrst group, The conventional ME and the extensions of this method stochastically partition the problem space into a number of subspaces using a special employed error function, and experts become specialised in each subspace. In the second group, the problem space is explicitly partitioned by the clustering method before the experts’ training process starts, and each expert is then assigned to one of these sub-spaces. Based on the implicit problem space partitioning using a tacit competitive process between the experts, we call the ﬁrst group the mixture of implicitly localised experts (MILE), and the second group is called mixture of explicitly localised experts (MELE), as it uses pre-speciﬁed clusters. The properties of both groups are investigated in comparison with each other. Investigation of MILE versus MELE, discussing the advantages and disadvantages of each group, showed that the two approaches have complementary features. Moreover, the features of the ME method are compared with other popular combining methods, including boosting and negative correlation learning methods. As the investigated methods have complementary strengths and limitations, previous researches that attempted to combine their features in integrated approaches are reviewed and, moreover, some suggestions are proposed for future research directions.},
+  abstract   = {Mixture of experts (ME) is one of the most popular and interesting combining methods, which has great potential to improve performance in machine learning. ME is established based on the divide-and-conquer principle in which the problem space is divided between a few neural network experts, supervised by a gating network. In earlier works on ME, different strategies were developed to divide the problem space between the experts. To survey and analyse these methods more clearly, we present a categorisation of the ME literature based on this difference. Various ME implementations were classiﬁed into two groups, according to the partitioning strategies used and both how and when the gating network is involved in the partitioning and combining procedures. In the ﬁrst group, The conventional ME and the extensions of this method stochastically partition the problem space into a number of subspaces using a special employed error function, and experts become specialised in each subspace. In the second group, the problem space is explicitly partitioned by the clustering method before the experts' training process starts, and each expert is then assigned to one of these sub-spaces. Based on the implicit problem space partitioning using a tacit competitive process between the experts, we call the ﬁrst group the mixture of implicitly localised experts (MILE), and the second group is called mixture of explicitly localised experts (MELE), as it uses pre-speciﬁed clusters. The properties of both groups are investigated in comparison with each other. Investigation of MILE versus MELE, discussing the advantages and disadvantages of each group, showed that the two approaches have complementary features. Moreover, the features of the ME method are compared with other popular combining methods, including boosting and negative correlation learning methods. As the investigated methods have complementary strengths and limitations, previous researches that attempted to combine their features in integrated approaches are reviewed and, moreover, some suggestions are proposed for future research directions.},
   language   = {en},
   number     = {2},
   urldate    = {2025-06-10},
@@ -658,4 +669,103 @@ https://openai.com/index/coderabbit/
   year       = {2014},
   pages      = {275--293},
   file       = {PDF:/Users/rasztabigab/Zotero/storage/9LWMHU3H/Masoudnia and Ebrahimpour - 2014 - Mixture of experts a literature survey.pdf:application/pdf}
+}
+
+% Nowe modele LLM - OpenAI
+@misc{gpt5,
+  title    = {GPT-5},
+  author   = {OpenAI},
+  url      = {https://openai.com/index/introducing-gpt-5/},
+  language = {en},
+  urldate  = {2025-10-27},
+}
+
+@misc{gpt5mini,
+  title    = {GPT-5 Mini},
+  author   = {OpenAI},
+  url      = {https://openai.com/index/introducing-gpt-5/},
+  language = {en},
+  urldate  = {2025-10-27},
+}
+
+% Nowe modele LLM - Anthropic
+@misc{claude_sonnet45,
+  title    = {Claude Sonnet 4.5},
+  author   = {Anthropic},
+  url      = {https://www.anthropic.com/news/claude-sonnet-4-5},
+  language = {en},
+  urldate  = {2025-10-27}
+}
+
+@misc{claude_haiku45,
+  title    = {Claude Haiku 4.5},
+  author   = {Anthropic},
+  url      = {https://www.anthropic.com/news/claude-haiku-4-5},
+  language = {en},
+  urldate  = {2025-10-27}
+}
+
+@misc{claude_opus41,
+  title    = {Claude Opus 4.1},
+  author   = {Anthropic},
+  url      = {https://www.anthropic.com/news/claude-opus-4-1},
+  language = {en},
+  urldate  = {2025-10-27}
+}
+
+% Nowe modele LLM - Open Source
+@misc{qwen3,
+  title    = {Qwen 3},
+  author   = {Alibaba Cloud},
+  url      = {https://qwen.ai/blog?id=1e3fa5c2d4662af2855586055ad037ed9e555125&from=research.research-list},
+  language = {en},
+  urldate  = {2025-10-27}
+}
+
+@misc{deepseek_r1,
+  title    = {DeepSeek R1},
+  author   = {DeepSeek AI},
+  url      = {https://api-docs.deepseek.com/news/news250120},
+  language = {en},
+  urldate  = {2025-10-27}
+}
+
+@misc{deepseek_v32,
+  title    = {DeepSeek V3.2},
+  author   = {DeepSeek AI},
+  url      = {https://api-docs.deepseek.com/news/news250929},
+  language = {en},
+  urldate  = {2025-10-27}
+}
+
+@misc{glm46,
+  title    = {GLM 4.6},
+  author   = {Zhipu AI},
+  url      = {https://z.ai/blog/glm-4.6},
+  language = {en},
+  urldate  = {2025-10-27}
+}
+
+@misc{mistral_medium,
+  title    = {Mistral Medium},
+  author   = {Mistral AI},
+  url      = {https://mistral.ai/news/mistral-medium-3},
+  language = {en},
+  urldate  = {2025-10-27}
+}
+
+@misc{llama4_maverick,
+  title    = {Llama 4 Maverick},
+  author   = {Meta},
+  url      = {https://www.llama.com/models/llama-4/},
+  language = {en},
+  urldate  = {2025-10-27}
+}
+
+@misc{llama4_scout,
+  title    = {Llama 4 Scout},
+  author   = {Meta},
+  url      = {https://www.llama.com/models/llama-4/},
+  language = {en},
+  urldate  = {2025-10-27}
 }
