--- a/docs/tex/3-przeglad-narzedzi.tex
+++ b/docs/tex/3-przeglad-narzedzi.tex
@@ -15,11 +15,21 @@ Modele komercyjne dostępne przez API zazwyczaj cechują się wysoką wydajnośc
 Wybrane do badania modele komercyjne to:
 
 \begin{itemize}
-    \item \textbf{OpenAI GPT‑4.1} \cite{gpt41} oraz \textbf{o3} \cite{o3}: Modele OpenAI z 2025 roku. GPT‑4.1 (wprowadzony 14 kwietnia 2025) to model zoptymalizowany pod kątem kodowania, obsługi długiego kontekstu (do 1 miliona tokenów), z szybszym działaniem i niższymi kosztami w porównaniu do GPT‑4o . Rodzina \textbf{o3}, w tym o3 mini, prezentuje głębokie możliwości logicznego rozumowania – stosowane razem w narzędziach takich jak CodeRabbit dla szybszego i bardziej niezawodnego sprawdzania kodu \cite{coderabbit}.
-    
-    \item \textbf{Anthropic Claude Opus 4} \cite{claude_opus4} oraz \textbf{Sonnet 4} \cite{claude_sonnet4}: Modele z rodziny Claude 4, opublikowane w maju 2025 roku. Opus 4 to najbardziej zaawansowana wersja, oferująca tryb \textit{extended thinking} i kontekst do 200 tys. tokenów. Sonnet 4 stanowi kompromis między mocą obliczeniową a szybkością i kosztami, również obsługuje rozszerzony kontekst i precyzyjne instrukcje.
+    \item \textbf{OpenAI GPT-5} \cite{gpt5}: TODO
 
-    \item \textbf{Google Gemini 2.5 Pro} \cite{gemini25_pro} i \textbf{2.5 Flash} \cite{gemini25_flash}: Modele wprowadzone w marcu i czerwcu 2025 roku. Gemini 2.5 Pro cechuje się wyjątkowo dużym kontekstem (do 1 miliona tokenów), zoptymalizowanym do złożonych zadań, takich jak analiza kodu i dokumentacji. Wersja 2.5 Flash to lżejszy wariant, skoncentrowany na szybszym działaniu i niższych kosztach operacyjnych.
+    \item \textbf{OpenAI GPT-5 Mini} \cite{gpt5mini}: TODO
+
+    \item \textbf{OpenAI o3} \cite{o3}: TODO
+
+    \item \textbf{Anthropic Claude Sonnet 4.5} \cite{claude_sonnet45}: TODO
+
+    \item \textbf{Anthropic Claude Haiku 4.5} \cite{claude_haiku45}: TODO
+
+    \item \textbf{Anthropic Claude Opus 4.1} \cite{claude_opus41}: TODO
+
+    \item \textbf{Google Gemini 2.5 Pro} \cite{gemini25_pro}: TODO
+
+    \item \textbf{Google Gemini 2.5 Flash} \cite{gemini25_flash}: TODO
 \end{itemize}
 
 Modele open-source stanowią atrakcyjną alternatywę, oferując pełną kontrolę, możliwość uruchomienia na własnej infrastrukturze oraz brak dodatkowych opłat za każde zapytanie. Ich wydajność zależy przede wszystkim od dostępności zasobów sprzętowych, a aktywny rozwój społeczności przyczynia się do ciągłej optymalizacji i pojawiania się coraz bardziej zaawansowanych wersji.
@@ -27,11 +37,19 @@ Modele open-source stanowią atrakcyjną alternatywę, oferując pełną kontrol
 Wybrane do badania modele open-source to:
 
 \begin{itemize}
-    \item \textbf{Mistral Medium} \cite{mistral_medium_3} oraz \textbf{Codestral} \cite{codestral}: Modele opracowane przez firmę Mistral AI. Mistral Medium 3 (maj 2025) to ogólnego przeznaczenia model o wysokiej wydajności, zoptymalizowany do pracy zarówno w chmurze, jak i lokalnie (on-premise). Charakteryzuje się bardzo korzystnym stosunkiem jakości do kosztów, osiągając wyniki porównywalne z modelami komercyjnymi przy niższych wymaganiach infrastrukturalnych. Codestral (maj 2024) to 22-miliardowy model open-weight, wyspecjalizowany w generowaniu i uzupełnianiu kodu źródłowego w ponad 80 językach programowania, wspierający m.in. kontekst 32 tys. tokenów.
+    \item \textbf{Qwen 3} \cite{qwen3}: TODO
 
-    \item \textbf{Meta Llama 4 Scout} oraz \textbf{Llama 4 Maverick} \cite{llama4}: Modele typu Mixture-of-Experts (MoE) \cite{masoudnia_mixture_2014} udostępnione przez firmę Meta w kwietniu 2025 roku. Llama 4 Scout to model z aktywacją 17 miliardów parametrów i maksymalnym kontekstem 10 milionów tokenów. Llama 4 Maverick to większy wariant, w którym aktywowanych jest również 17 miliardów parametrów, ale model korzysta z architektury 128 ekspertów i posiada łącznie około 400 miliardów parametrów, przy oknie kontekstu rzędu 1 miliona tokenów. Oba modele zostały wydane na otwartej licencji, wspierają zarówno zadania językowe, jak i multimodalne.
+    \item \textbf{DeepSeek R1} \cite{deepseek_r1}: TODO
 
-    \item \textbf{DeepSeek V3} \cite{deepseek_v3}: Model zaprezentowany przez DeepSeek AI w grudniu 2024 roku. DeepSeek V3 to otwarty model typu MoE o łącznej liczbie 670 miliardów parametrów, z których 37 miliardów jest aktywowanych przy każdym zapytaniu. Model osiąga wysoką przepustowość (do 60 tokenów na sekundę) i został wytrenowany na 14,8 bilionach tokenów. W benchmarkach przewyższa m.in. GPT-4 Turbo i Claude 3.5 w zadaniach kodowych, matematycznych i językowych. Obsługuje kontekst 32 tys. tokenów i został udostępniony na licencji OpenRAIL.
+    \item \textbf{DeepSeek V3.2} \cite{deepseek_v32}: TODO
+
+    \item \textbf{GLM 4.6} \cite{glm46}: TODO
+
+    \item \textbf{Mistral Medium} \cite{mistral_medium}: TODO
+
+    \item \textbf{Meta Llama 4 Maverick} \cite{llama4_maverick}: TODO
+
+    \item \textbf{Meta Llama 4 Scout} \cite{llama4_scout}: TODO
 \end{itemize}
 
 Wszystkie wymienione modele reprezentują aktualny szczyt osiągnięć w dziedzinie dużych modeli językowych. Wybrane zostały przede wszystkim ze względu na ich potwierdzone zdolności do generowania wysokiej jakości kodu oraz wsparcie dla funkcji \textit{tool calling}. Funkcje te umożliwiają bezpośrednią integrację modeli z zewnętrznymi narzędziami lub usługami poprzez dedykowane mechanizmy API bądź platformy agentowe, takie jak LangChain \cite{langchain} czy LangGraph \cite{langgraph}. W proponowanym w tej pracy podejściu, funkcje \textit{tool calling} będą odgrywać znaczącą rolę w zarządzaniu kontekstem i procesie generowania konfiguracji.
@@ -55,17 +73,21 @@ Poniższa tabela \ref{tab:llm-characteristic} przedstawia ogólne charakterystyk
 \label{tab:llm-characteristic}
 \begin{tabular}{| c | c | c | c |} \hline
 \textbf{Dostawca} & \textbf{Model} & \textbf{Parametry (mld)} & \textbf{Okno kontekstu (tokeny)} \\ \hline\hline
-OpenAI & GPT-4.1 & - & 1M \\ \hline
-OpenAI & O3 & - & 200k \\ \hline
-Anthropic & Claude Opus 4 & - & 200k \\ \hline
-Anthropic & Claude Sonnet 4 & - & 200k \\ \hline
-Google & Gemini 2.5 Pro & - & 1M \\ \hline
-Google & Gemini 2.5 Flash & - & 1M \\ \hline
-Mistral AI & Mistral Medium & 12.9 & 32k \\ \hline
-Mistral AI & Codestral & 22 & 32k \\ \hline
-Meta & Llama 4 Maverick & ~400 & 1M \\ \hline
-Meta & Llama 4 Scout & 17 & 10M \\ \hline
-DeepSeek & DeepSeek V3 & 671 & 128k \\ \hline
+OpenAI & GPT-5 & - & TODO \\ \hline
+OpenAI & GPT-5 Mini & - & TODO \\ \hline
+OpenAI & o3 & - & TODO \\ \hline
+Anthropic & Claude Sonnet 4.5 & - & TODO \\ \hline
+Anthropic & Claude Haiku 4.5 & - & TODO \\ \hline
+Anthropic & Claude Opus 4.1 & - & TODO \\ \hline
+Google & Gemini 2.5 Pro & - & TODO \\ \hline
+Google & Gemini 2.5 Flash & - & TODO \\ \hline
+Qwen & Qwen 3 & TODO & TODO \\ \hline
+DeepSeek & DeepSeek R1 & TODO & TODO \\ \hline
+DeepSeek & DeepSeek V3.2 & TODO & TODO \\ \hline
+Zhipu AI & GLM 4.6 & TODO & TODO \\ \hline
+Mistral AI & Mistral Medium & TODO & TODO \\ \hline
+Meta & Llama 4 Maverick & TODO & TODO \\ \hline
+Meta & Llama 4 Scout & TODO & TODO \\ \hline
 \end{tabular}
 \end{table}
 
@@ -164,15 +186,17 @@ Eksperymenty zostały przeprowadzone na lokalnej stacji roboczej, którą stanow
 Do zarządzania kontenerami i środowiskami uruchomieniowymi wykorzystano następujące narzędzia:
 \begin{itemize}
 	\item \textbf{Docker Desktop:} \cite{docker_desktop} Używany do uruchamiania kontenerów oraz do budowania obrazów Docker na podstawie generowanych plików Dockerfile. Docker Desktop służył jako podstawowe środowisko konteneryzacji.
-	\item \textbf{Kind (Kubernetes in Docker):} \cite{kind} Lekki klaster Kubernetes uruchamiany w kontenerach Docker. Kind posłużył jako środowisko do walidacji wygenerowanych manifestów Kubernetes. Pozwoliło to na weryfikację, czy aplikacje faktycznie uruchamiają się i działają poprawnie w środowisku Kubernetes.
+	\item \textbf{Kind (Kubernetes in Docker):} \cite{kind} Lekki klaster Kubernetes uruchamiany w kontenerach Docker. Kind posłużył jako środowisko do walidacji wygenerowanych manifestów Kubernetes w fazie eksperymentalnej. Pozwoliło to na weryfikację, czy aplikacje faktycznie uruchamiają się i działają poprawnie w środowisku Kubernetes.
+	\item \textbf{MicroK8s:} \cite{microk8s} Lekka dystrybucja Kubernetes przeznaczona do uruchamiania w środowiskach produkcyjnych oraz testowych. MicroK8s został wykorzystany jako bardziej zbliżony do środowiska produkcyjnego klaster Kubernetes, umożliwiający walidację wygenerowanych konfiguracji w warunkach bardziej odpowiadających rzeczywistym wdrożeniom.
 \end{itemize}
 
 Cała logika sterowania eksperymentami, w tym implementacja agentów, wywoływanie narzędzi, walidacja i zbieranie wyników, została zrealizowana przy użyciu języka \textbf{Python w wersji 3.13}. Wykorzystane biblioteki Python obejmowały:
 \begin{itemize}
-	\item \textbf{LangChain i LangGraph:} \cite{langchain} \cite{langgraph} Te frameworki stanowiły podstawę do budowy architektury agentowej, zarządzania przepływami konwersacji z LLM oraz integrowania wywołań narzędzi (tool calling).
+	\item \textbf{LangChain i LangGraph:} \cite{langchain} \cite{langgraph} Te frameworki stanowiły podstawę do budowy architektury agentowej, zarządzania przepływami konwersacji z LLM oraz integrowania wywołań narzędzi.
 	\item \textbf{Docker SDK for Python (docker):} \cite{docker_sdk_python} Umożliwiała programistyczną interakcję z Docker Daemon, w tym budowanie obrazów i zarządzanie kontenerami.
 	\item \textbf{Kubernetes Python Client (kubernetes):} \cite{kubernetes_sdk_python} Służyła do programistycznej interakcji z API Kubernetes, umożliwiając wdrażanie manifestów i sprawdzanie stanu zasobów.
 	\item \textbf{Pydantic:} \cite{pydantic} Wykorzystywana do walidacji danych i definiowania schematów wejścia/wyjścia dla funkcji i narzędzi używanych przez agentów, co zwiększyło niezawodność i bezpieczeństwo interakcji.
+	\item \textbf{Streamlit:} \cite{streamlit} Framework do szybkiego tworzenia aplikacji webowych w języku Python, wykorzystany do implementacji panelu sterowania eksperymentami. Umożliwił stworzenie interaktywnego interfejsu do zarządzania eksperymentami, monitorowania ich postępu oraz przeglądania wyników.
 	\item Inne standardowe biblioteki Python do obsługi danych, operacji na plikach oraz generowania raportów.
 \end{itemize}
 
